--- a/api/templates/Simulator/simulator_enarm_tres.html
+++ b/api/templates/Simulator/simulator_enarm_tres.html
@@ -2,60 +2,66 @@
 {% load static%}
 {%block titleapp%} ENARM 365 {% endblock%}
 {% block navegador %}
-<!-- Inicia Menu Superior-->
 <ul class="nav navbar-nav d-none d-sm-flex flex justify-content-start ml-8pt">
-    <ul class="nav navbar-nav d-none d-sm-flex flex justify-content-start ml-8pt">
-        <li class="nav-item">
-            <a href="{% url 'index' %}"
-               class="nav-link">Home</a> <!-- Home Up -->
-        </li>
-        <li class="nav-item dropdown active">
-            <a href=""
-               class="nav-link dropdown-toggle"
-               data-toggle="dropdown"
-               data-caret="false">Simuladores</a>
-            <div class="dropdown-menu">
-                <a href="{% url 'simulator_free' %}"
-                   class="dropdown-item">Gratuito</a>
-                <a href="{% url 'mostrar_enarm' %}"
-                   class="dropdown-item"><span class="mr-16pt">Enarm365 Completo</span> <span class="badge badge-notifications badge-accent text-uppercase ml-auto">Pro</span></a>
-                <a href="{% url 'mostrar_temas' %}"
-                   class="dropdown-item">Tema</a>
-            </div>
-        </li>
-        <li class="nav-item dropdown">
-            <a href="estadisticas.html"
-               class="nav-link dropdown-toggle"
-               data-toggle="dropdown"
-               data-caret="false">Estadisticas</a>
-            <div class="dropdown-menu">
-                <a href="{% url 'resultados' %}"
-                   class="dropdown-item">Resultados</a>
-                <a href="{% url 'dashboard' %}"
-                   class="dropdown-item">Dashboard</a>
-            </div>
-        </li>
-        <li class="nav-item">
-            <a href="{% url 'pricing' %}"
-               class="nav-link">Pricing</a>
-        </li>
-        
-    <ul class="nav navbar-nav ml-auto mr-0">
-        <li class="nav-item">
-            <a href="login.html"
-               class="nav-link"
-               data-toggle="tooltip"
-               data-title="Login"
-               data-placement="bottom"
-               data-boundary="window"><i class="material-icons">lock_open</i></a>
-        </li>
-        <li class="nav-item">
-            <form method="post" action="{% url 'logout' %}">
-                 {% csrf_token %}
-            <button type="submit" class="btn btn-outline-dark">Logout</button>
-            </form>
-        </li> 
-    </ul>
+    <li class="nav-item  active">
+        <a href="{% url 'index' %}"
+           class="nav-link">Home</a> <!-- Home Up -->
+    </li>
+    {% if not es_mayor_a_30_dias %}
+    <li class="nav-item dropdown">
+        <a href=""
+           class="nav-link dropdown-toggle"
+           data-toggle="dropdown"
+           data-caret="false">Simuladores</a>
+        <div class="dropdown-menu">
+            <a href="{% url 'simulator_free' %}"
+               class="dropdown-item">Gratuito</a>
+            <a href="{% url 'mostrar_enarm' %}"
+               class="dropdown-item"><span class="mr-16pt">Enarm 365 Completo</span> <span class="badge badge-notifications badge-accent text-uppercase ml-auto">Pro</span></a>
+            <a href="{% url 'mostrar_temas' %}"
+               class="dropdown-item">Tema</a>
+        </div>
+    </li>
+    
+    
+    <li class="nav-item dropdown">
+        <a href="estadisticas.html"
+           class="nav-link dropdown-toggle"
+           data-toggle="dropdown"
+           data-caret="false">Estadisticas</a>
+        <div class="dropdown-menu">
+            <a href="{% url 'resultados' %}"
+               class="dropdown-item">Resultados</a>
+            <a href="{% url 'dashboard' %}"
+               class="dropdown-item">Dashboard</a>
+        </div>
+    </li>
+    {% endif %}
+    {% if es_mayor_a_30_dias %}
+    <li class="nav-item">
+        <a href="{% url 'pricing' %}"
+           class="nav-link">Pricing</a>
+    </li>
+    
+    {% endif %}
+    
+<ul class="nav navbar-nav ml-auto mr-0">
+    <li class="nav-item">
+        <a href=""
+           class="nav-link"
+           data-toggle="tooltip"
+           data-title="Login"
+           data-placement="bottom"
+           data-boundary="window"><i class="material-icons">lock_open</i></a>
+    </li>
+    <li class="nav-item">
+        <form method="post" action="{% url 'logout' %}">
+             {% csrf_token %}
+        <button type="submit" class="btn btn-outline-dark">Logout</button>
+        </form>
+    </li> 
+</ul>
+
 {% endblock %}
 {%block appcontenido%}
 
