--- a/api/templates/Estadisticos/resultados.html
+++ b/api/templates/Estadisticos/resultados.html
@@ -2,13 +2,12 @@
 {% load static%}
 {%block titleapp%} ENARM 365 {% endblock%}
 {% block navegador %}
-<!-- Inicia Menu Superior-->
-<!-- Inicia Menu Superior-->
 <ul class="nav navbar-nav d-none d-sm-flex flex justify-content-start ml-8pt">
-    <li class="nav-item">
+    <li class="nav-item  active">
         <a href="{% url 'index' %}"
            class="nav-link">Home</a> <!-- Home Up -->
     </li>
+    {% if not es_mayor_a_30_dias %}
     <li class="nav-item dropdown">
         <a href=""
            class="nav-link dropdown-toggle"
@@ -23,7 +22,9 @@
                class="dropdown-item">Tema</a>
         </div>
     </li>
-    <li class="nav-item dropdown active">
+    
+    
+    <li class="nav-item dropdown">
         <a href="estadisticas.html"
            class="nav-link dropdown-toggle"
            data-toggle="dropdown"
@@ -35,14 +36,18 @@
                class="dropdown-item">Dashboard</a>
         </div>
     </li>
+    {% endif %}
+    {% if es_mayor_a_30_dias %}
     <li class="nav-item">
         <a href="{% url 'pricing' %}"
            class="nav-link">Pricing</a>
     </li>
     
+    {% endif %}
+    
 <ul class="nav navbar-nav ml-auto mr-0">
     <li class="nav-item">
-        <a href="login.html"
+        <a href=""
            class="nav-link"
            data-toggle="tooltip"
            data-title="Login"
@@ -56,6 +61,7 @@
         </form>
     </li> 
 </ul>
+
 {% endblock %}
 {%block appcontenido%}
 
