--- a/api/templates/checkout.html
+++ b/api/templates/checkout.html
@@ -2,12 +2,12 @@
 {% load static%}
 {%block titleapp%} ENARM 365 {% endblock%}
 {% block navegador %}
-<!-- Inicia Menu Superior-->
 <ul class="nav navbar-nav d-none d-sm-flex flex justify-content-start ml-8pt">
     <li class="nav-item  active">
         <a href="{% url 'index' %}"
            class="nav-link">Home</a> <!-- Home Up -->
     </li>
+    {% if not es_mayor_a_30_dias %}
     <li class="nav-item dropdown">
         <a href=""
            class="nav-link dropdown-toggle"
@@ -22,8 +22,10 @@
                class="dropdown-item">Tema</a>
         </div>
     </li>
+    
+    
     <li class="nav-item dropdown">
-        <a href=""
+        <a href="estadisticas.html"
            class="nav-link dropdown-toggle"
            data-toggle="dropdown"
            data-caret="false">Estadisticas</a>
@@ -34,10 +36,14 @@
                class="dropdown-item">Dashboard</a>
         </div>
     </li>
+    {% endif %}
+    {% if es_mayor_a_30_dias %}
     <li class="nav-item">
-        <a href=""
+        <a href="{% url 'pricing' %}"
            class="nav-link">Pricing</a>
     </li>
+    
+    {% endif %}
     
 <ul class="nav navbar-nav ml-auto mr-0">
     <li class="nav-item">
@@ -55,6 +61,7 @@
         </form>
     </li> 
 </ul>
+
 {% endblock %}
 {%block appcontenido%}
 
