cambios finales pricing

--- a/api/templates/pricing.html
+++ b/api/templates/pricing.html
@@ -64,7 +64,7 @@
 {% endblock %}
 {%block appcontenido%}
 
-{% if ultimo_pago %}
+{% if not ultimo_pago %}
 <!-- Page Pricing //////////////////////////-->
 <div class="mx-auto mt-40pt ">
 <div class="row card-group-row mb-16pt mb-lg-40pt">
