--- a/api/templates/pricing.html
+++ b/api/templates/pricing.html
@@ -159,7 +159,7 @@
                     <p class="lh-1 text-muted mb-0"><small>Folio: {{ultimo_pago.folio_pago}}</small></p>
                 </div>
                 <div class="card-footer">
-                       class="btn btn-primary">Vigente
+                       <button class="btn btn-primary">Vigente</button>
                 </div>
             </div>
     
