--- a/api/templates/pagomensual.html
+++ b/api/templates/pagomensual.html
@@ -159,7 +159,7 @@
                                 `Transaction ${transaction.status}: ${transaction.id}<br><br>See console for all available details`,
                             );
                             console.log("Capture result", orderData, JSON.stringify(orderData, null, 2));
-                            window.location.href = '';
+                            window.location.href = '/';
                         }
                     } catch (error) {
                         console.error(error);
