--- a/api/templates/pagomensual.html
+++ b/api/templates/pagomensual.html
@@ -109,8 +109,8 @@
                             body: JSON.stringify({
                                 cart: [
                                     {
-                                        id: "YOUR_PRODUCT_ID",
-                                        quantity: "YOUR_PRODUCT_QUANTITY",
+                                        id: "1",
+                                        quantity: "1",
                                     },
                                 ],
                             }),
